* Fix issue where IE fails to GC when the page is navigated away from before it's done loading. (jddalton, Andrew Dupont)

* Fix issue where Safari improperly reports an element as a descendant of itself.

* Greatly simplify IE's implementation of Element#descendantOf.

* Prevent exception when using Selector to search for an attribute that is not present. [gryn, Andrew Dupont]

* Fix issues where Firefox improperly returns the wrong node from a call to Event.element. Also fixes possible exception in Event.element in IE. [jdalton, Andrew Dupont]

* Fix issue where Safari 3 deletes custom properties from the document object when the page is returned to via the back button. [mzsanford, kangax, Andrew Dupont]

* Integrate support for the W3C Selectors API into the Selector class. Will now use the API when possible (browser supports the API *and* recognizes the given selector). Means minor changes to the semantics of :enabled, :disabled, and :empty in order to comply with CSS spec.

* Avoid re-extending element in Element#getDimensions. [kangax]

* Prevent Hash#toQueryString from serializing objets. [kangax, Tobie Langel]

* Fix Event#pointer in IE standard mode. Closes #9920. [kangax, Tobie Langel]

* Instanciate Test.Unit.Logger on window load. [Tobie Langel]

* Unit tests clean-up. [Tobie Langel]

* Refactor String#escapeHTML to avoid using the `with` statement. [Tobie Langel]

* Remove usage of the `with` statement from unit tests. [Tobie Langel]

* Complete rewrite of the deprecation helper, now renamed UpdateHelper and useable by third-party libs. [Tobie Langel]

* Make Element#writeAttribute handle frameborder attribute in IE. Closes #11068. [staaky, Tobie Langel]

* Minor clean-up of selector.js. Closes #10844. [RQuadling]

* Make String#unescapeHTML strip tags in IE. Closes #10173. [kangax]

* Stop form observers in unit tests. Closes #10938. [kangax]

* Performance improvements for Enumerables. Closes #11264. [Ben, Samuel Lebeau]
