@@ -1,3 +1,5 @@
+* Loop through all elements and remove all handlers on page unload. IE needs this in order to prevent memory leaks. (kangax, jddalton, Andrew Dupont)
+
 * Fix issue where IE fails to GC when the page is navigated away from before it's done loading. (jddalton, Andrew Dupont)
 
 * Fix issue where Safari improperly reports an element as a descendant of itself.
